Fix ScrollBar issue to be consistent with non legacy of Prod

--- a/ui/demo/less/reader.less
+++ b/ui/demo/less/reader.less
@@ -18,7 +18,9 @@ body {
 }
 
 .reader__main {
+  background-color: @grey;
   grid-area: main;
+  overflow: auto;
   position: relative;
 }
 
@@ -27,7 +29,6 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: @grey;
-  overflow: scroll;
   height: 100%;
   position: relative;
 }
